Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-134075

Windows Server 2016 is no longer working

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.8.4, 6.9.1, 6.10.0 FF
    • 6.8.0, 6.8.1, 6.8.2, 6.9.0 Beta2
    • Core: Threads
    • None
    • Windows
    • a9e251332 (dev), 5ed1dcd1c (6.9), 9484b6e5b (6.8)

      https://codereview.qt-project.org/c/qt/qtbase/+/542795 started to use SetThreadDescription with the message

      Starting with Windows 10 1607 there's a modern API to set a thread's name on Windows (replacing the RaiseException hack).
      

      But one point in the documentation was missed:

      Windows Server 2016, Windows 10 LTSB 2016 and Windows 10 version 1607: SetThreadDescription is only available by Run Time Dynamic Linking in KernelBase.dll.
      

      This leads to the following error, when we start out application:

      Sadly we need to support Windows Server 2016 even if Qt no longer supports it. At least we want you to know this issues. We are currently work on a solution using https://doc.qt.io/qt-6/qlibrary.html to load KernelBase.dll. Maybe you can give us a hint if the way looks right?

        1. error.png
          6 kB
          Lars Schmertmann
        2. error1.png
          6 kB
          Lars Schmertmann
        3. 1_LoadLibrary.png
          326 kB
          Lars Schmertmann
        4. 2_Depends.png
          266 kB
          Lars Schmertmann
        5. image-2025-09-19-11-17-22-263.png
          64 kB
          Otto Ryynänen
        6. image-2025-09-19-11-22-17-204.png
          57 kB
          Otto Ryynänen
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            thiago Thiago Macieira
            larss Lars Schmertmann
            Votes:
            0 Vote for this issue
            Watchers:
            12 Start watching this issue

              Created:
              Updated:
              Resolved: