src/corelib/thread/qthread_win.cpp
@@ -165,7 +165,21 @@ unsigned int __stdcall QT_ENSURE_STACK_ALIGNED_FOR_SSE QThreadPrivate::start(voi
     QString threadName = std::exchange(thr->d_func()->objectName, {});
     if (Q_LIKELY(threadName.isEmpty()))
         threadName = QString::fromUtf8(thr->metaObject()->className());
+#ifndef QT_WIN_SERVER_2016_COMPAT
     SetThreadDescription(GetCurrentThread(), reinterpret_cast<const wchar_t *>(threadName.utf16()));
+#else
+    HMODULE kernelbase = GetModuleHandleW(L"kernelbase.dll");
+    if (kernelbase != NULL) {
+        typedef HRESULT (WINAPI *DESCFUNC)(HANDLE, PCWSTR);
+
+        DESCFUNC setThreadDescription =
+            (DESCFUNC)GetProcAddress(kernelbase, "SetThreadDescription");
+        if (setThreadDescription != NULL) {
+            setThreadDescription(GetCurrentThread(),
+                                 reinterpret_cast<const wchar_t *>(threadName.utf16()));
+        }
+    }
+#endif
 
     emit thr->started(QThread::QPrivateSignal());
     QThread::setTerminationEnabled(true);
